src/test/resources/predinline/errors/trigger-pred.vpr
inline predicate P(this: Ref) {
  check2(this)
}

function check(x: Ref): Bool
function check2(x: Ref): Bool

method test1(this: Ref)
requires forall x: Ref :: {P(x)} check(x)
requires P(this)
//:: ExpectedOutput(postcondition.violated:assertion.false)
ensures check(this) {
  assert P(this)
}